tests/NormalTests/paczka1/small_fuzzy/99670852.err
Error in line 4: A370 A669 5,5
Error in line 15: DCk0iLrUmhc S960 92,0
